infra/namespaces/default/backend/ingress.yaml
# Setup required was done following this
# https://www.digitalocean.com/community/tutorials/how-to-set-up-an-nginx-ingress-on-digitalocean-kubernetes-using-helm#step-2-installing-the-kubernetes-nginx-ingress-controller
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: backend-ingress
spec:
  rules:
  - host: "api.drscm.nl"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 80
